<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="20dp">

    <ImageView
        android:id="@+id/promotedImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/welcome_image"
        android:src="@drawable/nauta_clear_logo" />

    <TextView
        android:id="@+id/txtStorage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/promotedImage"
        android:layout_marginTop="15dp"
        android:gravity="start"
        android:text="@string/almacenamiento"
        android:textAlignment="textStart"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtStorageUsage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/promotedImage"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/txtStorage"
        android:layout_toRightOf="@+id/txtStorage"
        android:gravity="end"
        android:text=""
        android:textAlignment="textEnd"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtEmails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtStorage"
        android:gravity="start"
        android:text="@string/correos"
        android:textAlignment="textStart"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtEmailsUsage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtStorageUsage"
        android:layout_toEndOf="@+id/txtEmails"
        android:layout_toRightOf="@+id/txtEmails"
        android:gravity="end"
        android:text=""
        android:textAlignment="textEnd"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
        android:id="@+id/progressBarSPace"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/txtEmails"
        android:layout_centerVertical="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        app:rcBackgroundColor="@color/round_corner_progress_bar_background_default"
        app:rcBackgroundPadding="2dp"
        app:rcProgress="0"
        app:rcProgressColor="@color/colorPrimary"
        app:rcRadius="4dp"
        app:rcReverse="true"
        app:rcSecondaryProgress="0"
        app:rcSecondaryProgressColor="@color/colorPrimary" />

    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/btnClearInbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBarSPace"
        android:layout_marginBottom="16dp"
        android:text="@string/limpiar_buzon"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        custom:pb_colorComplete="@color/green_complete"
        custom:pb_colorError="@color/red_error"
        custom:pb_colorNormal="@color/blue_normal"
        custom:pb_colorPressed="@color/blue_pressed"
        custom:pb_colorProgress="@color/purple_progress"
        custom:pb_textComplete="Listo"
        custom:pb_textError="Buzón vacío"
        custom:pb_textProgress="Limpiando" />

    <Button
        android:id="@+id/donateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnClearInbox"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_donation"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_donation"
        android:onClick="donate"
        android:text="@string/donacion_voluntaria"
        android:textSize="15sp"
        android:textStyle="bold" />

</RelativeLayout>